--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "json-server": "^0.17.0",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.2.1"
   },
   "devDependencies": {
     "eslint": "8.8.0",
