--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "json-server": "^0.17.0",
-    "next": "12.0.9",
+    "next": "^12.1.0",
+    "next-auth": "^3.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^1.2.1"
