--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "rm -fr .next && next build",
     "start": "next start",
     "lint": "next lint",
-    "serve-json": "json-server --watch db.json --port 4000"
+    "serve-json": "json-server --watch db.json --port 4000",
+    "clean": "rm -fr .next"
   },
   "dependencies": {
     "json-server": "^0.17.0",
